--- a/css/main.css
+++ b/css/main.css
@@ -42,7 +42,7 @@ a:hover, a:focus {
 
 @media (max-width: 800px) {
 
-#bannerphoto {
+  #bannerphoto {
 	background: url("../images/bannerSM.jpg") no-repeat center center fixed; 
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
@@ -97,7 +97,7 @@ a:hover, a:focus {
 	width: 100%;
 	height: 100%;
 	position: relative;
-	background: white;
+	background: #FFEEEE;
 }
 
 
@@ -193,24 +193,4 @@ footer ul li a {
   font-size: 12px;
   /*color: rgba(255, 255, 255, 0.3); */
 }
-
-
-
-/*
-
-footer a,
-footer ul li a:hover,
-footer ul li a:focus,
-footer ul li a:active,
-footer ul li a.active {
-  text-decoration: none;
-  color: none;
-  display: inline-block;
-}
-
-
-#footer, .scrollup:after {
-  height: 0px; 
-}
-*/
 
